--- a/_posts/2018-04-05-snv-lq.md
+++ b/_posts/2018-04-05-snv-lq.md
@@ -1,9 +1,11 @@
 ---
 layout: post
-title: Location quotients
-subtitle: How diverse is Southern Nevada compared to the nation?
+title: Which Industries Drive Your Local Economy?
+subtitle: Economic Base Part 1 – Location Quotients
 bigimg: /img/path.jpg
 tags: [test]
 ---
 
-A location quotient is a simple ratio that can represent how concentrated a particular industry is in a region as compared to the nation. 
+The economic base can be thought of as being the engine that drives the economy of a community. It is the industry (or industries) that provides exports from the local area to the rest of the world.  This is apparent for some regions: automobile manufacturing is an important part of the economic base of Detroit, technology plays a similar role for Silicon Valley and Seattle, finance is a fundamental driver in New York, and for Las Vegas—my hometown—tourism dominates.
+
+A region's economic base is determined by which of its sectors “export” goods or services to other parts of the country. Generally, traded sectors serve a customer base that extends beyond the local market, and...to continue later...
