--- a/_posts/2018-04-23-snv-lq.md
+++ b/_posts/2018-04-23-snv-lq.md
@@ -2,7 +2,7 @@
 layout: post
 title: Which Industries Drive Your Local Economy?
 subtitle: Economic Base Part 1 – Location Quotients
-bigimg: /img/path.jpg
+bigimg: /img/strip.jpg
 tags: [test]
 ---
 
